# sked_parser

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
sked_parser/: __main__.py  app.py  scraper.py
tests/: test_scraper.py
