[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sked-parser"
version = "1.1.0"
description = "Parses Ostfalia sked timetables into JSON"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "beautifulsoup4==4.13.4",
  "jsonpickle==4.1.1",
  "lxml==5.4.0",
  "pyyaml==6.0.2",
  "requests==2.32.5",
  "setuptools==78.1.1",
]
[project.license]
file = "LICENSE"

[project.scripts]
sked-parser = "sked_parser.__main__:main"

[tool.setuptools.packages.find]
include = ["sked_parser"]

[tool.ruff]
line-length = 140

[tool.uv]
dev-dependencies = ["pytest~=8.4.2", "requests-cache>=1.2.1", "ruff>=0.6.9"]
