[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sked-parser"
version = "1.1.0"
description = "Parses Ostfalia sked timetables into JSON"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4==4.14.2",
  "jsonpickle==4.1.1",
  "lxml==6.0.2",
  "pyyaml==6.0.3",
  "requests==2.32.5",
  "setuptools==80.9.0",
]
[project.license]
file = "LICENSE"

[project.scripts]
sked-parser = "sked_parser.__main__:main"

[tool.setuptools.packages.find]
include = ["sked_parser"]

[tool.ruff]
line-length = 140

[dependency-groups]
dev = ["pytest>=9.0.1", "requests-cache>=1.2.1", "ruff>=0.6.9"]
